packages/legacy-workbench/src/css/graphs-vizualizations.css
.rdf-info-side-panel.visual-graph.embedded {
    top: 0 !important;
}

.node {
    stroke: #fff;
    stroke-width: 1.5px;
    opacity: 1;
}

.link {
    stroke: #999;
    stroke-opacity: .6;
}

.node-wrapper {
    cursor: pointer;
}

/* not used at the moment, see node-label-body */
.node-labels {
    fill: #000;
    font-weight: 300;
}

.direction-arrow {
    fill: #999;
    stroke: #999;
    stroke-opacity: .6;
}

.predicates {
    cursor: pointer;
    /*preventing marking of the text*/
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Chrome/Safari/Opera */
    -khtml-user-select: none; /* Konqueror */
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer/Edge */
    user-select: none;
    /* Non-prefixed version, currently
                                     not supported by any browser */
}

.title {
    position: absolute;
    background-color: rgba(2552, 255, 255, 0.75);
    z-index: 10;
}

.search-and-toolbar {
    position: absolute;
    z-index: 10;
}

.search-bar {
    user-select: none;
    /* Non-prefixed version, currently not supported by any browser */
}

.toolbar-holder {
    position: relative;
    top: -3em;
    z-index: 10;
    background-color: var(--gw-panel-background);
    width: max-content;
    margin-left: auto;
}

.rdf-list .node-info {
    overflow-y: auto;
    height: 70vh;
    margin-top: 10px;
    padding: 0;
}

.rdf-side-panel-content ul.rdf-list li.node-info {
    padding: 0;
}

.graph-visualization {
    height: calc(100vh - 190px);
}

.graph-visualization svg {
    height: 100%;
    width: 100%;
}

.graph-visualization svg rect {
    cursor: move;
}

.predicate, .predicates {
    font-size: 90%;
}

.predicates {
    font-weight: 500;
}

.expand-button {
    cursor: pointer;
}

.arrow-marker {
    stroke: #999;
    stroke-opacity: 0.8;
    stroke-width: 1;
}

.rdf-info-side-panel.node-info.predicate-info .rdf-list {
    padding: 0;
}

.language-tag {
    position: relative;
    top: -0.5em;
    font-size: 75%;
}

#keyboardShortcuts {
    position: fixed;
    bottom: 0;
    right: 0;
    z-index: 10;
}

g > foreignObject {
    align-content: center;
    overflow: visible;
}

.truncated-label {
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    overflow: hidden;
}

.node-label-body {
    font-weight: 300;
}

.node-label-body div {
    word-break: break-all;
    margin: auto;
    text-align: center;
}

.node-wrapper .pinned {
    text-anchor: middle;
    alignment-baseline: middle;
}

.triple-pred:hover {
    color:var(--gw-tertiary-base)
}

.triple-pred {
    color: var(--gw-primary-dark);
}

.disable-visual-graph-node {
    pointer-events: none;
}

